force-app/main/default/objects/OSA_Authorized_profiles__c/OSA_Authorized_profiles__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>OSA  Authorized profiles</label>
</CustomObject>