force-app/main/default/objects/OSA_Authorized_profiles__c/fields/appointment_type_change__c.field-meta.xml
<CustomField>
    <fullName>appointment_type_change__c</fullName>
    <defaultValue>&quot;iconics_sa, iconics_care_expert&quot;</defaultValue>
    <label>appointment type change</label>
    <type>TextArea</type>
</CustomField>