force-app/main/default/objects/OSA_Authorized_profiles__c/fields/appointment_type_change_PS__c.field-meta.xml
<CustomField>
    <fullName>appointment_type_change_PS__c</fullName>
    <label>appointment type change PS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>