force-app/main/default/objects/OSA_Authorized_profiles__c/fields/CSC_user__c.field-meta.xml
<CustomField>
    <fullName>CSC_user__c</fullName>
    <defaultValue>&quot;system administrator, iconics_corporate, iconics_sa_manager, iconics_sa, iconics_care_expert&quot;</defaultValue>
    <label>CSC user</label>
    <type>TextArea</type>
</CustomField>