force-app/main/default/objects/OSA_Authorized_profiles__c/fields/CSC_user_PS__c.field-meta.xml
<CustomField>
    <fullName>CSC_user_PS__c</fullName>
    <label>CSC user PS</label>
    <length>45</length>
    <type>Text</type>
</CustomField>