force-app/main/default/objects/OSA_Authorized_profiles__c/fields/store_change__c.field-meta.xml
<CustomField>
    <fullName>store_change__c</fullName>
    <defaultValue>&quot;system administrator, icon_corporate, iconics_corporate, iconics_sa_manager, iconics_sa, icon_corporate_everywhere,  iconics_care_expert&quot;</defaultValue>
    <label>store change</label>
    <type>TextArea</type>
</CustomField>