force-app/main/default/objects/OSA_Authorized_profiles__c/fields/store_change_PS__c.field-meta.xml
<CustomField>
    <fullName>store_change_PS__c</fullName>
    <label>store change PS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>