force-app/main/default/objects/OSA_Authorized_profiles__c/fields/user_action__c.field-meta.xml
<CustomField>
    <fullName>user_action__c</fullName>
    <defaultValue>&quot;system administrator, icon_sa manager, icon_corporate, icon_samanager_everywhere, icon_corporate_everywhere, iconics_care_expert&quot;</defaultValue>
    <label>user action</label>
    <type>TextArea</type>
</CustomField>