force-app/main/default/objects/OSA_Authorized_profiles__c/fields/user_action_PS__c.field-meta.xml
<CustomField>
    <fullName>user_action_PS__c</fullName>
    <label>user action PS</label>
    <length>45</length>
    <type>Text</type>
</CustomField>